--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -34,11 +34,11 @@
         
         <!-- Content -->
         <main>
-            <div class="container-xl">{% block content %}{% endblock %}</div>
+            <div class="container">{% block content %}{% endblock %}</div>
         </main>
         <!-- Footer -->
         <footer>
-            <p>&copy; 2023 Process Engagement Letters</p>
+            <p>&copy; 2023 Process Engagement Letters - Neil Crum</p>
         </footer>
     </body>
 </html>
