--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -61,6 +61,7 @@ You should have received a copy of the GNU General Public License
 {% endblock %}
 
 {% block content %}
+<h1 class="title text-center">Engagement Letter System</h1>
 <div id="folderSelectionSupport-alert" class="alert alert-error" hidden>Incompatible browser for folder select. Please switch to Chrome, Edge or Opera.</div>
 <form method="post" action="/engagementLetters/document-rollover" enctype="multipart/form-data" id="processEngagementLetters">
     <input type="hidden" name="csrf-token" id="csrf-token" value="{{ csrf_token() }}">
@@ -70,7 +71,7 @@ You should have received a copy of the GNU General Public License
     </div>
     <div class="file-selector">
         <input type="text" id="currentYearDirectory" disabled>
-        <button onclick="selectFolder('currentYearDirectory')">Select Folder</button>
+        <button type="button" onclick="selectFolder('currentYearDirectory')">Select Folder</button>
         <input type="file" name="currentYearDirectory" id="currentYearDirectory-picker" webkitdirectory directory multiple style="display: none;" onchange="folderSelected('currentYearDirectory', 'currentYearDirectory-picker')">
     </div>
     <button type="submit">Process</button>
