--- a/frontend/templates/settings.html
+++ b/frontend/templates/settings.html
@@ -36,6 +36,7 @@ You should have received a copy of the GNU General Public License
 {% endblock %}
 
 {% block content %}
+<h1 class="title text-center">ELS Settings</h1>
 <form method="post" action="/settings" enctype="multipart/form-data" id="userSettings">
     <input type="hidden" name="csrf-token" id="csrf-token" value="{{ csrf_token() }}">
     <div id="userSettings-alertPlaceholder"></div>
