Update page title

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -18,7 +18,7 @@ You should have received a copy of the GNU General Public License
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %}{% endblock %} - Process Engagement Letters</title>
+        <title>{% block title %}{% endblock %} - Engagement Letter System</title>
         <link rel="stylesheet" href="styles.css">
         <script type="module" src="scripts/app.js"></script>
         {% block headScript %}{% endblock %}
@@ -39,7 +39,7 @@ You should have received a copy of the GNU General Public License
         <header>
             <nav class="navbar">
                 <!-- Navbar content -->
-                <a href="/" class="navbar-brand">Process Engagement Letters</a>
+                <a href="/" class="navbar-brand">ELS</a>
                 <ul class="navbar-nav">
                     <li><a href="/" class="nav-link">Home</a></li>
                     <li><a href="/settings" class="nav-link">Settings</a></li>
@@ -53,7 +53,7 @@ You should have received a copy of the GNU General Public License
         </main>
         <!-- Footer -->
         <footer>
-            <p>&copy; 2023 Process Engagement Letters - Neil Crum</p>
+            <p>&copy; 2023 Engagement Letter System - Neil Crum</p>
         </footer>
     </body>
 </html>
