--- a/frontend/templates/settings.html
+++ b/frontend/templates/settings.html
@@ -62,7 +62,9 @@ You should have received a copy of the GNU General Public License
             <small>{{ setting.description }}</small>
         </div>
     {% endfor %}
-    <button type="submit">Save Settings</button>
+    <div>
+        <button class="btn btn-secondary submit-button" type="submit">Save Settings</button>
+    </div>
 </form>
 <div id="alertModal-overlay" class="modal-overlay"></div>
 {% endblock %}
