--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -575,6 +575,22 @@ form {
     font-size: 0.875rem;
 }
 
+.input-error {
+    color: var(--black);
+    background-color: var(--white);
+    border-color: var(--error);
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem var(--error-rgb);
+}
+
+.input-success {
+    color: var(--black);
+    background-color: var(--white);
+    border-color: var(--success);
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem var(--success-rgb);
+}
+
 .file-selector {
     display: flex;
     align-items: center;
