--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -49,6 +49,7 @@ You should have received a copy of the GNU General Public License
                 <a href="/" class="navbar-brand">ELS</a>
                 <ul class="navbar-nav">
                     <li><a href="/" class="nav-link">Home</a></li>
+                    <li><a href="/entityChecker" class="nav-link">Entity</a></li>
                     <li><a href="/settings" class="nav-link">Settings</a></li>
                 </ul>
             </nav>
