--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -36,14 +36,14 @@ You should have received a copy of the GNU General Public License
     processEngagementLettersForms.addEventListener('submit', function(event) {
         event.preventDefault();
         const formData = new FormData(this);
-        console.log(formData);
         app.processEngagementLetters(formData);
     });
 </script>
 {% endblock %}
 
 {% block content %}
-<h1 class="title text-center">Engagement Letter System</h1>
+<h1 class="title is-1 text-center">Engagement Letter System</h1>
+<p class="subtitle is-3 text-center">Rollover engagement letters to the next year</p>
 <div id="folderSelectionSupport-alert" class="alert alert-error" hidden>Incompatible browser for folder select. Please switch to Chrome, Edge or Opera.</div>
 <form method="post" action="/engagementLetters/document-rollover" enctype="multipart/form-data" id="processEngagementLetters">
     <input type="hidden" name="csrf-token" id="csrf-token" value="{{ csrf_token() }}">
@@ -57,11 +57,12 @@ You should have received a copy of the GNU General Public License
         <input type="file" name="currentYearDirectory" id="currentYearDirectory-picker" webkitdirectory directory multiple style="display: none;" onchange="folderSelected('currentYearDirectory', 'currentYearDirectory-picker')">
     </div>
     <div>
-        <button class="btn btn-secondary submit-button" type="submit">Process</button>
+        <button class="btn btn-secondary submit-button" type="submit">Rollover</button>
     </div>
 </form>
 <!-- Show results in a scrollable box -->
-<h3>Results:</h3>
+<h3 class="title is-3">Rollover Results:</h3>
+<p class="subtitle is-5">Rollover results are displayed below</p>
 <div id="processEngagementLetters-results" class="results-container"></div>
 <div id="alertModal-overlay" class="modal-overlay"></div>
 {% endblock %}
