--- a/frontend/templates/settings.html
+++ b/frontend/templates/settings.html
@@ -29,7 +29,8 @@ You should have received a copy of the GNU General Public License
 {% endblock %}
 
 {% block content %}
-<h1 class="title text-center">ELS Settings</h1>
+<h1 class="title is-1 text-center">ELS Settings</h1>
+<p class="subtitle is-3 text-center">Configure different system settings</p>
 <form method="post" action="/settings" enctype="multipart/form-data" id="userSettings">
     <input type="hidden" name="csrf-token" id="csrf-token" value="{{ csrf_token() }}">
     <div id="userSettings-alertPlaceholder"></div>
