--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -49,7 +49,7 @@ You should have received a copy of the GNU General Public License
                 <a href="/" class="navbar-brand">ELS</a>
                 <ul class="navbar-nav">
                     <li><a href="/" class="nav-link">Rollover</a></li>
-                    <li><a href="/entityChecker" class="nav-link">Entity</a></li>
+                    <li><a href="/entityChecker" class="nav-link">EntityCheck</a></li>
                     <li><a href="/pdfPrinter" class="nav-link">PDFPrinter</a></li>
                     <li><a href="/settings" class="nav-link">Settings</a></li>
                 </ul>
