add frontend logic for pdf signatures

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -51,6 +51,7 @@ You should have received a copy of the GNU General Public License
                     <li><a href="/" class="nav-link">Rollover</a></li>
                     <li><a href="/entityChecker" class="nav-link">EntityCheck</a></li>
                     <li><a href="/pdfPrinter" class="nav-link">PDFPrinter</a></li>
+                    <li><a href="/pdfSignatures" class="nav-link">PDFSignatures</a></li>
                     <li><a href="/settings" class="nav-link">Settings</a></li>
                 </ul>
             </nav>
